# GAX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: ABLATIONS.md  PUBLIC_NARRATIVE.md  REVIEWER_RESPONSE.md
eval/: METHODOLOGY.md  PUBLISH_GIST.md  __init__.py  ablations.py  comparisons.py  extended_eval.py  frameworks.yaml  load_env.py  mcp_catalog.py  mcp_live.py  run_comparison.py  run_full.py  scoring.py  session_transcript.py  tasks.yaml  token_count.py
examples/: README.md  agent_lib.py  agent_pr_triage.py  requirements-agent.txt
gax/: README.md  pyproject.toml
gax/config/: oauth_providers.yaml  policy.rego  policy.yaml
gax/examples/: demo-session.sh  petstore-openapi.json  plan-demo.yaml  plan-parallel.yaml
gax/gax/: __init__.py  audit.py  caps.py  cli.py  client.py  compliance.py  daemon.py  envelope.py  executor.py  macaroons_cap.py  mcp_client.py  oauth.py  opa_policy.py  openapi_gen.py  otel_audit.py  paths.py  plan.py  policy.py  policy_bundle.py  projection.py  registry.py  secrets.py  spiffe.py  vault.py
gax/gax/adapters/: __init__.py  base.py  exec_adapter.py  http_adapter.py  mcp_bridge.py  mock_adapter.py
gax/manifests/: aws.s3.list.yaml  demo.echo.yaml  gh.pr.list.yaml  gh.pr.view.yaml  jira.issue.get.yaml  kubectl.get.pods.yaml  mcp.github.list_pulls.yaml  pet_findpetsbystatus.yaml  pet_getpetbyid.yaml
gax/schemas/: envelope.v1.json
gax/tests/: test_acsp_envelope_conformance.py  test_agent_governance.py  test_eval_extended.py  test_gax.py  test_macaroon_policy.py  test_mcp_bridge_mock.py  test_phase34.py  test_plan.py
(+72 files in other folders)
