[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gax"
version = "0.4.0"
description = "Governed Agent eXecution — CLI ergonomics with embedded governance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "jsonschema>=4.20",
  "PyJWT>=2.8",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
keyring = ["keyring>=25.0"]

[project.scripts]
gax = "gax.cli:main"
gaxd = "gax.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gax*"]

[tool.setuptools.package-data]
gax = ["../manifests/*.yaml", "../schemas/*.json"]
